[project]
name = "rh_uno"
description = "This is a UNO ComfyUI plugin implementation that can run the full version with 24GB VRAM, as well as quickly run the FP8 version."
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/HM-RunningHub/ComfyUI_RH_UNO"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI_RH_UNO"
Icon = ""
